added locations to html

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE.<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    
-</head>
 
-<h1></h1>
+  <head>
+    <meta charset="utf-8">
+    <title>Objects and the DOM</title>
+  </head>
 
-<link rel="stylesheet" href="css/style.css"/>
+  <body>
+    <h1>Seattle-area Seagull Counts, Week of 2/3</h1>
 
-<script src="js/app.js"></script>
+    <h2>1st and Pike</h2>
+    <ul id="firstandpike"></ul>
 
-<body>
+    <h2>Seatac Airport</h2>
+    <ul id="seatac"></ul>
 
-</body>
+    <h2>Seattle Center</h2>
+    <ul id="seattlecenter"></ul>
+
+    <h2>Capitol Hill</h2>
+    <ul id="capitolhill"></ul>
+
+    <h2>Alki</h2>
+    <ul id="alki"></ul>
+
+    <script src="app.js"></script>
+  </body>
+
 </html>
