created my objects

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Seattle-area Seagull Counts, Week of 2/3</h1>
+    <h1>Seattle-area Salmon Cookies Sales Projections.</h1>
 
     <h2>1st and Pike</h2>
     <ul id="firstandpike"></ul>
