--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+
+    <img src="img/salmon.png">
+    
     <h1>Seattle-area Salmon Cookies Sales Projections.</h1>
 
     <h2>1st and Pike</h2>
