--- a/sales.html
+++ b/sales.html
@@ -1,31 +1,14 @@
-<!DOCTYPE.<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset="utf-8">
-    <title>Objects and the DOM</title>
-  </head>
-
-  <body>
-
-    <img src="img/salmon.png">
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <meta charset="utf-8">
+        <title>Sales Data: Pat's Salmon Cookies</title>
+      </head>
+      <body>
+        <h1>Pat's Salmon Cookies: Sales Data</h1>
     
-    <h1>Seattle-area Salmon Cookies Sales Projections.</h1>
-
-    <h2>1st and Pike</h2>
-    <ul id="firstandpike"></ul>
-
-    <h2>Seatac Airport</h2>
-    <ul id="seatac"></ul>
-
-    <h2>Seattle Center</h2>
-    <ul id="seattlecenter"></ul>
-
-    <h2>Capitol Hill</h2>
-    <ul id="capitolhill"></ul>
-
-    <h2>Alki</h2>
-    <ul id="alki"></ul>
+        <table id="sales-table"></table>
+  
 
     <script src="js/app.js"></script>
   </body>
