added new store form

--- a/sales.html
+++ b/sales.html
@@ -4,6 +4,25 @@
         <meta charset="utf-8">
         <title>Sales Data: Pat's Salmon Cookies</title>
       </head>
+      <form id="addingstore">
+        <fieldset>
+          <label for="location">Location</label>
+          <input name="location" type="text"/>
+
+          <label for="minCustomers">Minimum Customers</label>
+          <input name="minCustomers" type="text"/>
+
+          <label for="maxCustomers">Maximum Customers</label>
+          <input name="maxCustomers" type="text"/>
+
+          <label for="avgCustomers">Average Customers</label>
+          <input name="avgCustomers" type="text"/>
+
+          <button id="submitbutton" type="submit">Submit</button>
+
+        </fieldset>
+
+      </form>
       <body>
         <h1>Pat's Salmon Cookies: Sales Data</h1>
     
